@@ -58,7 +58,7 @@ KMAP *kmap_getcontext(unsigned char *name)
 
 OPTIONS *options = NULL;
 extern int mid, dspasis, dspctrl, force, help, pgamnt, square, csmode, nobackups, lightoff, exask, skiptop, noxon, lines, staen, columns, Baud, dopadding, orphan, marking, beep, keepup, nonotice;
-extern int notite, usetabs;
+extern int notite, usetabs, assume_color;
 extern unsigned char *backpath;
 
 OPTIONS pdefault = {
@@ -214,6 +214,7 @@ struct glopts {
 	{US "skiptop",	1, &skiptop, NULL, 0, 0, 0, 0, 0, 64 },
 	{US "notite",	0, &notite, NULL, 0, 0, 0 },
 	{US "usetabs",	0, &usetabs, NULL, 0, 0, 0 },
+	{US "assume_color", 0, &assume_color, NULL, 0, 0, 0 },
 	{ NULL,		0, NULL, NULL, NULL, NULL, NULL, 0, 0, 0 }
 };
 
